feat: change whatsapp group id

--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -1,6 +1,6 @@
 ---
     layout: main.njk
-    title: "Lkhibra Academy"
+    title: "Ajincodew Academy"
     plugins:
         - cta
         - mask
