feat: code formating

--- a/src/_includes/pages/Students.njk
+++ b/src/_includes/pages/Students.njk
@@ -138,7 +138,7 @@ Cours pour la préparation aux examens</p>
                     <!-- Submit Button -->
                     <div>
                         <button type="submit" 
-                            class="bg-red-primary w-full hover:bg-red-primary text-white font-semibold px-4 py-2 rounded-md">Soumettre</button>
+                            class="bg-green-primary w-full hover:bg-green-primary text-white font-semibold px-4 py-2 rounded-md">Soumettre</button>
                     </div>
                 </form>
                 </div>
