--- a/src/_includes/partials/Training/heroTraining.njk
+++ b/src/_includes/partials/Training/heroTraining.njk
@@ -27,7 +27,7 @@
         </p>
         <div class="mx-auto max-w-none flex justify-around items-center flex-col md:flex-row gap-2 md:gap-0" x-data >
           <a 
-            class="btn text-white bg-red-primary w-full px-0  md:my-6 " 
+            class="btn text-white bg-green-primary w-full px-0  md:my-6 " 
             href="#pricing" >
             {{ hero.cta1 | i18n }}
             </a>
