--- a/src/_includes/partials/dropdown.njk
+++ b/src/_includes/partials/dropdown.njk
@@ -43,7 +43,7 @@
                             </span>
                         {% endif %}
                         {% if item.closed %}
-                            <span class="text-xs font-bold text-white rounded bg-red-700 px-2 mr-2">
+                            <span class="text-xs font-bold text-white rounded bg-green-700 px-2 mr-2">
                                 {{ 'closed' | i18n }}
                             </span>
                         {% endif %}
