--- a/src/_includes/partials/offers.njk
+++ b/src/_includes/partials/offers.njk
@@ -6,13 +6,13 @@
 
             <div class="relative rounded-t-2xl h-fit md:order-3">
                 <div class="flex items-center flex-col pt-1 border-2 border-red-primary 
-                rounded-t-2xl px-4 text-white bg-red-primary w-fit mx-auto">
+                rounded-t-2xl px-4 text-white bg-green-primary w-fit mx-auto">
                         <p class="text-lg font-medium text-center ">
                             {{ offers[2].fTitle }} 
                         </p>         
                 </div>
-                        <div class=" flex flex-col bg-red-primary rounded-2xl ">
-                            <div class="relative bg-red-primary flex-1 m-5">
+                        <div class=" flex flex-col bg-green-primary rounded-2xl ">
+                            <div class="relative bg-green-primary flex-1 m-5">
                                 <h3 class="font-semibold text-lg text-white">
                                     {{ offers[2].title }}
                                 </h3>
@@ -117,7 +117,7 @@
                 <div class="mt-4 rounded-lg">
                     <a aria-controls="modal"
                         class="flex justify-around items-center rounded-md text-lg mt-2 font-normal p-2
-                        bg-red-primary text-white w-full text-center cursor-pointer"
+                        bg-green-primary text-white w-full text-center cursor-pointer"
                         x-cta="{offer:offers[1].value, training: {{ training|json }}}">
                         تسجيل
                     </a>
@@ -164,7 +164,7 @@
                 <div class="mt-4 rounded-lg">
                     <a aria-controls="modal"
                         class="flex justify-around items-center rounded-md text-lg mt-2 font-normal p-2
-                        bg-red-primary text-white w-full text-center cursor-pointer"
+                        bg-green-primary text-white w-full text-center cursor-pointer"
                         x-cta="{offer:offers[2].value, training: {{ training|json }}}">
                         تسجيل
                     </a>
@@ -183,13 +183,13 @@
 
             <div class="relative rounded-t-2xl h-fit md:order-3">
                 <div class="flex items-center flex-col pt-1 border-2 border-red-primary 
-                rounded-t-2xl px-4 text-white bg-red-primary w-fit mx-auto">
+                rounded-t-2xl px-4 text-white bg-green-primary w-fit mx-auto">
                         <p class="text-lg font-medium text-center ">
                             {{ offers[2].fTitle }} 
                         </p>         
                 </div>
-                        <div class=" flex flex-col bg-red-primary rounded-2xl ">
-                            <div class="relative bg-red-primary flex-1 m-5">
+                        <div class=" flex flex-col bg-green-primary rounded-2xl ">
+                            <div class="relative bg-green-primary flex-1 m-5">
                                 <h3 class="font-semibold text-lg text-white">
                                     {{ offers[2].title }}
                                 </h3>
@@ -294,7 +294,7 @@
                 <div class="mt-4 rounded-lg">
                     <a aria-controls="modal"
                         class="flex justify-around items-center rounded-md text-lg mt-2 font-normal p-2
-                        bg-red-primary text-white w-full text-center cursor-pointer"
+                        bg-green-primary text-white w-full text-center cursor-pointer"
                         x-cta="{offer:offers[2].value, training: {{ training|json }}}">
                         تسجيل
                     </a>
