--- a/src/_includes/pages/Individual.njk
+++ b/src/_includes/pages/Individual.njk
@@ -37,7 +37,7 @@ plugins:
         </p>
         <div class="mx-auto flex justify-around items-center flex-col md:flex-row gap-2 md:gap-0" x-data >
           <a href="#pricing"
-            class="btn text-white bg-red-primary w-full px-0  md:my-6 ">
+            class="btn text-white bg-green-primary w-full px-0  md:my-6 ">
            ابدأ الآن</a>
             
         </div>
@@ -106,7 +106,7 @@ plugins:
     {# Define Objectives #}
     <div class="flex items-start gap-4">
       <div class="flex-shrink-0">
-        <span class="w-10 h-10 rounded-full bg-red-primary text-white flex items-center justify-center">1</span>
+        <span class="w-10 h-10 rounded-full bg-green-primary text-white flex items-center justify-center">1</span>
       </div>
       <div>
         <h3 class="text-lg font-medium">تحديد الأهداف</h3>
@@ -116,7 +116,7 @@ plugins:
     {# Schedule Consultation #}
     <div class="flex items-start gap-4">
       <div class="flex-shrink-0">
-        <span class="w-10 h-10 rounded-full bg-red-primary text-white flex items-center justify-center">2</span>
+        <span class="w-10 h-10 rounded-full bg-green-primary text-white flex items-center justify-center">2</span>
       </div>
       <div>
         <h3 class="text-lg font-medium">جدولة استشارة</h3>
@@ -126,7 +126,7 @@ plugins:
     {# Start Your Journey #}
     <div class="flex items-start gap-4">
       <div class="flex-shrink-0">
-        <span class="w-10 h-10 rounded-full bg-red-primary text-white flex items-center justify-center">3</span>
+        <span class="w-10 h-10 rounded-full bg-green-primary text-white flex items-center justify-center">3</span>
       </div>
       <div>
         <h3 class="text-lg font-medium">ابدأ رحلتك</h3>
@@ -198,7 +198,7 @@ plugins:
                 <a href="https://api.whatsapp.com/send?phone=YOURNUMBER&text=I%20am%20interested%20in%20the%20individual%20learning%20sessions."
                     target="_blank"
                     onClick="fbq('track', 'Lead')" 
-                    class="w-full pb-1 pt-2 rounded-md bg-red-primary text-base md:text-lg font-medium text-center text-white">
+                    class="w-full pb-1 pt-2 rounded-md bg-green-primary text-base md:text-lg font-medium text-center text-white">
                                 تواصل معنا 
                 </a>
             </div> 
