--- a/src/_includes/pages/ThankyouStudent.njk
+++ b/src/_includes/pages/ThankyouStudent.njk
@@ -18,11 +18,11 @@ plugins:
                 <p class="p-2 font-semibold text-lg md:text-xl text-center text-red-primary">
                   تم توصل بطلبك بنجاح
                 </p>
-                {# <p class="px-1 py-3 font-medium text-sm md:text-lg text-center text-gray-800">
+                <p class="px-1 py-3 font-medium text-sm md:text-lg text-center text-gray-800">
                   جميع خطوات التسجيل تم إرسالها في بريدك الإلكتروني وسوف نتصل بك في أقرب وقت من أجل التأكيد
-                </p> #}
+                </p>
     <div class="flex flex-row justify-between items-center mt-4 min-w-[265px]">
-        <a href="https://chat.whatsapp.com/Fxurpbkphnn3KGWFRIXb03"
+        <a href="https://chat.whatsapp.com/Kd7J0fwQPcxK4whX9J8SGm"
         class="flex items-start flex-row p-2 px-3 rounded-2xl bg-green-500 text-white w-fit">
             <i class="fa-brands fa-whatsapp w-4 h-4"></i>
             <p class="text-xs font-medium mr-1">
