--- a/src/_includes/pages/graphic-design.njk
+++ b/src/_includes/pages/graphic-design.njk
@@ -103,7 +103,7 @@ plugins:
                     </div>
                 </div>    
                 <div class="flex flex-row justify-between items-center w-full gap-2 md:gap-4">
-                    <div class="flex flex-col justify-between items-start  h-70 md:h-80 w-full p-4 rounded-2xl bg-red-primary">
+                    <div class="flex flex-col justify-between items-start  h-70 md:h-80 w-full p-4 rounded-2xl bg-green-primary">
                         <p class="text-sm font-medium text-right text-red-primary bg-white rounded-md w-fit px-2 py-1 mb-2">
                                                 أداء مرة واحدة
                         </p>
@@ -156,7 +156,7 @@ plugins:
                         <a href="https://api.whatsapp.com/send?phone=212612527672&text=بغيت%20نسجل%20فالتدريب%20ديال%20البرمجة%20بالعرض%20ديال%20295%20درهم%20فالشهر."
                             target="_blank"
                             onClick="fbq('track', 'Lead')" 
-                            class="w-full py-1 rounded-md bg-red-primary text-base md:text-lg font-medium text-center text-white">
+                            class="w-full py-1 rounded-md bg-green-primary text-base md:text-lg font-medium text-center text-white">
                                         تسجيل
                         </a>
                     </div> 
