--- a/src/_includes/partials/closed.njk
+++ b/src/_includes/partials/closed.njk
@@ -60,7 +60,7 @@
             </div>
 
             <div class="flex flex-col justify-between items-center w-full gap-2 md:gap-4">
-                <p class="py-4 bg-red-primary text-white w-full text-center font-medium">   
+                <p class="py-4 bg-green-primary text-white w-full text-center font-medium">   
 التسجيل مغلق الآن
                 </p>
                 <div class="flex flex-row justify-between items-center w-full gap-2 md:gap-4">
@@ -81,7 +81,7 @@
                                         
                         </div>
                                 
-                        {# <p class="w-full py-1 rounded-md bg-red-primary text-base md:text-lg font-medium text-center text-white">
+                        {# <p class="w-full py-1 rounded-md bg-green-primary text-base md:text-lg font-medium text-center text-white">
                                         تسجيل
                         </p> #}
                     </div> 
@@ -102,7 +102,7 @@
                                         
                         </div>
                                 
-                        {# <p class="w-full py-1 rounded-md bg-red-primary text-base md:text-lg font-medium text-center text-white">
+                        {# <p class="w-full py-1 rounded-md bg-green-primary text-base md:text-lg font-medium text-center text-white">
                                         تسجيل
                         </p> #}
                     </div> 
