--- a/src/_includes/pages/Aboutus.njk
+++ b/src/_includes/pages/Aboutus.njk
@@ -62,23 +62,23 @@ plugins:
                     </p>
                 </div>
                 <div class='flex-shrink-0 bg-white rounded-lg outline outline-1
-                 outline-green-default p-3 w-10 h-10 flex justify-center items-center '>
+                 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
                     {% if item.icon == "users" %}
-                        <i class="fa fa-users text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fa fa-users text-green-primary text-center" aria-hidden="true"></i>
                     {% elif item.icon == "bolt" %}
-                        <i class="fas fa-bolt text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fas fa-bolt text-green-primary text-center" aria-hidden="true"></i>
                     {% elif item.icon == "globe-americas" %}
-                        <i class="fas fa-globe-americas text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fas fa-globe-americas text-green-primary text-center" aria-hidden="true"></i>
                     {% elif item.icon == "lightbulb" %}
-                        <i class="fa fa-lightbulb  text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fa fa-lightbulb  text-green-primary text-center" aria-hidden="true"></i>
                     {% elif item.icon == "briefcase" %}
-                        <i class="fa fa-briefcase text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fa fa-briefcase text-green-primary text-center" aria-hidden="true"></i>
                     {% elif item.icon == "shield" %}
-                        <i class="fa fa-shield-alt text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fa fa-shield-alt text-green-primary text-center" aria-hidden="true"></i>
                     {% elif item.icon == "rocket" %}
-                        <i class="fas fa-rocket text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fas fa-rocket text-green-primary text-center" aria-hidden="true"></i>
                     {% elif item.icon == "hand" %}
-                        <i class="fa fa-hand-holding-heart text-green-default text-center" aria-hidden="true"></i>
+                        <i class="fa fa-hand-holding-heart text-green-primary text-center" aria-hidden="true"></i>
                     {% endif %}
                 </div>
             </div>
