--- a/src/_includes/partials/Home/ourtrainings.njk
+++ b/src/_includes/partials/Home/ourtrainings.njk
@@ -13,7 +13,7 @@
                 <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
                     {% for tag in item.tags %}
                     <li
-                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-default rounded-full mx-1" 
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
                     >
                         {{ tag }}
                     </li>
@@ -28,8 +28,8 @@
                     {{ item.desc }}
                 </p>
                 <p
-                    class="inline-block pb-1 mt-4 font-medium text-green-default
-                    border-b border-green-default "
+                    class="inline-block pb-1 mt-4 font-medium text-green-primary
+                    border-b border-green-primary "
                 >
                     {{ item.cta }}
                 </p>
