--- a/src/_includes/partials/Home/heroHome.njk
+++ b/src/_includes/partials/Home/heroHome.njk
@@ -18,7 +18,7 @@
           <a 
             class="btn text-white w-full md:max-w-fit md:my-6"
             style="background-color:#0fb579" 
-            href="/ar/ai"
+            href="/ar/basics"
         >{{ "HeroHome.cta1" | i18n}}</a>
         </div>
       </div>
