feat: add ico image

--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -1,6 +1,6 @@
 ---
     layout: main.njk
-    title: "Ajincodew Academy"
+    title: "Ajincodew academy"
     plugins:
         - cta
         - mask
