--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -53,7 +53,7 @@
     {% endif %}
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ajincodew.svg" />
 
     <!-- Additional External Scripts -->
     <script src="https://kit.fontawesome.com/0e1c2ad640.js" crossorigin="anonymous"></script>
@@ -62,8 +62,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
 
     <!-- Favicon Sizes for Browsers -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ajincodew.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ajincodew.png?v=1">
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="/site.webmanifest?v=1">
@@ -72,7 +72,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#5bbad5">
 
     <!-- Alternate Favicon -->
-    <link rel="alternate icon" sizes="16x16" href="/favicon.ico?v=1">
+    <link rel="alternate icon" sizes="16x16" href="/ajincodew.ico?v=1">
 
     <!-- MS Application Tile Color -->
     <meta name="msapplication-TileColor" content="#da532c">
