--- a/src/index.njk
+++ b/src/index.njk
@@ -7,13 +7,13 @@
     <title>{{ title }}</title>
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ site.baseUrl }}{{ page.url }}">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ajincodew.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ajincodew.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ajincodew.png?v=1">
     <link rel="manifest" href="/site.webmanifest?v=1">
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#5bbad5">
-    <link rel="alternate icon" sizes="16x16" href="/favicon.ico?v=1">
+    <link rel="alternate icon" sizes="16x16" href="/ajincodew.ico?v=1">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="facebook-domain-verification" content="shf31z6j1ih9ff63lf5inn2c4gouo9" />
