--- a/src/_includes/partials/Training/More.njk
+++ b/src/_includes/partials/Training/More.njk
@@ -1,5 +1,5 @@
 {% macro More(MoreTraining) %}
-<div <div id="trainings" class='relative max-w-6xl mx-auto px-5 sm:px-6 py-12'>
+<div <div id="trainings" class='relative max-w-6xl mx-auto px-5 sm:px-6'>
     <p class='text-center text-2xl md:text-3xl font-bold mb-2'>
     {{ [MoreTraining, "title"] | join(".") | i18n }}
     {# {{ context[MoreTraining].title | i18qn }} #}
