fix: fix missed files issues

--- a/src/_includes/pages/basics.njk
+++ b/src/_includes/pages/basics.njk
@@ -10,7 +10,7 @@ plugins:
 {% set offers = translation[page.lang].offersPython %}
 {% set hero = translation[page.lang].HeroBasics %}
 {% from "partials/Training/DoubleSec.njk" import DoubleSec with context %}
-{% from "partials/Training/More.njk" import More with context %}
+{% from "partials/Training/more.njk" import More with context %}
 {% include "partials/cta.njk" %}
 <main class="flex-grow pt-16">
     {% include "partials/Training/heroTraining.njk" %}
