--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -88,5 +88,5 @@ plugins:
     </section>
 
         {% include "partials/Home/certification.njk" %}
-    {% include "partials/Social.njk" %}
+    {% include "partials/social.njk" %}
 </main>
