--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -9,8 +9,8 @@ plugins:
 {% set training = "Frontend" %}
 {% set offers = translation[page.lang].offersFrontend %}
 {% set hero = translation[page.lang].HeroFrontend %}
-{% from "partials/Training/DoubleSec.njk" import DoubleSec with context %}
-{% from "partials/Training/More.njk" import More with context %}
+{% from "partials/Training/doubleSec.njk" import DoubleSec with context %}
+{% from "partials/Training/more.njk" import More with context %}
 {% include "partials/cta.njk" %}
 <main class="flex-grow pt-16">
     {% include "partials/fixed.njk" %}
