--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -8,7 +8,7 @@
         - swiper
 ---
 {% include "partials/cta.njk" %}
-{% from "partials/Training/More.njk" import More with context %}
+{% from "partials/Training/more.njk" import More with context %}
 <main class="flex-grow pt-16">
     {% include "partials/fixed.njk" %}
 
@@ -18,5 +18,5 @@
     {{ More("MoreHome") }}
     {% include "partials/Home/ourtrainings.njk" %}
     {% include "partials/Home/certification.njk" %}
-    {% include "partials/Social.njk" %}
+    {% include "partials/social.njk" %}
 </main>
