fix: fix build issues and remove useless text

--- a/src/ar/responsibility.njk
+++ b/src/ar/responsibility.njk
@@ -20,7 +20,7 @@ title: إخلاء المسؤولية
                             href="mailto:ajincodew.academy@gmail.com">ajincodew.academy@gmail.com</a>
                         <br />
                         <br />
-                        بدخولك لهذا الموقع و استخدامك لأحد او جميع منتجات موقع لخبرة دوت ما , فأنت توافق على كل ما في
+                        بدخولك لهذا الموقع و استخدامك لأحد او جميع منتجات موقع آجي نكوديو دوت كوم , فأنت توافق على كل ما في
                         هذه الصفحه و بالتالي إذا لم توافق على اي منها , فرجاء لا تستخدم الموقع او المنتجات.
                         <br />
                         <br />
