--- a/src/ar/termsofuse.njk
+++ b/src/ar/termsofuse.njk
@@ -14,21 +14,11 @@ title: شروط الاستخدام
                     <p dir="rtl">
                         شروط الاسخدام لأي زائر يدخل هذا الموقع :<br />
                         <br />
-                        مقدمة: المهدي بن النية هو صاحب هذا الموقع و هو من يديره مع فريق عمله فقط , و بالتالي فان
-                        استخدامك له يعني موافقتك بشكل كامل على الشروط الأحكام التالية الخاصة به , لهذا فإننا نحب دائماً
-                        ان تقرأ هذه الصفحه لتعرف الشروط التي يجب ان تتقيدها لتتعامل مع هذا الموقع بشكل لا يخالف اي من
-                        سياساته.
-                        <br />
-                        <br />
-                        سياسة الخصوصيه : لخبرة دوت ما يحترم سياسة الخصوصيه لديك , و لك كامل التحكم بمعلوماتك و لن يتم
+                        سياسة الخصوصيه : لآجي نكوديو دوت كوم يحترم سياسة الخصوصيه لديك , و لك كامل التحكم بمعلوماتك و لن يتم
                         تجميعها الا باذنك و برغبتك انت طبعاً , و قد قمنا بعمل صفحه كامله تعرف فيها سياسة الخصوصيه الخاصه
                         بهذا الموقع من خلال الضغط على هذا الرابط من هنا.
                         <br />
-                        <br />
-                        الملكيه الفكريه : المهدي بن النية هو وحده من يملك محتوى هذا الموقع بالكامل , من فيديوهات و دورات
-                        و نص و كورسات … الخ , كل ماتراه في هذا الموقع من جهده الخاص هو و فريق عمله.
-                        <br />
-                        العلامات التجاريه : لخبرة أكاديمي لا تقبل وجود علامات تجاريه هنا على هذا الموقع , هذا يضر بمصلحة
+                        العلامات التجاريه : لآجي نكوديو أكاديمي لا تقبل وجود علامات تجاريه هنا على هذا الموقع , هذا يضر بمصلحة
                         الزائر .. و لا يجوز لك عمل اي عمليه تهدف الى تسويق علامه تجاريه معينه , الا طبعا اذا استأذنت من
                         صاحب الموقع و وافق هو على ذلك.
                         <br /><br />
