feat: update index.njk

--- a/src/index.njk
+++ b/src/index.njk
@@ -18,6 +18,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="facebook-domain-verification" content="shf31z6j1ih9ff63lf5inn2c4gouo9" />
     <meta http-equiv="refresh" content="0; url=/ar">
+    <meta name="google-site-verification" content="sTp6dJK44cs4qVHufAnaQE0FYSRqzpx9WoopyTa6jRw" />
 </head>
 <body>
 </body>
