feat: optimize seo

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
-<!-- Created By Datawise Agency  -->
+<!-- Created By Datawise Agency -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
+
+    <!-- Open Graph Tags -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ site.baseUrl }}{{ page.url }}">
+
+    <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/ajincodew.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
+    <link rel="icon" sizes="180x180" href="/ajincodew.png?v=1">
     <link rel="icon" type="image/png" sizes="32x32" href="/ajincodew.png?v=1">
     <link rel="icon" type="image/png" sizes="16x16" href="/ajincodew.png?v=1">
+    <link rel="icon" type="image/png" sizes="96x96" href="/ajincodew.png?v=1">
+    <link rel="icon" href="/favicon.ico?v=1">
     <link rel="manifest" href="/site.webmanifest?v=1">
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#5bbad5">
     <link rel="alternate icon" sizes="16x16" href="/ajincodew.ico?v=1">
+
+    <!-- Meta Tags for PWA and Verification -->
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- Facebook Verification -->
     <meta name="facebook-domain-verification" content="shf31z6j1ih9ff63lf5inn2c4gouo9" />
+
+    <!-- Redirect to Arabic version -->
     <meta http-equiv="refresh" content="0; url=/ar">
+
+    <!-- Google Site Verification -->
     <meta name="google-site-verification" content="sTp6dJK44cs4qVHufAnaQE0FYSRqzpx9WoopyTa6jRw" />
 </head>
 <body>
