feat: implements about us page

--- a/src/_includes/pages/Individual.njk
+++ b/src/_includes/pages/Individual.njk
@@ -22,7 +22,7 @@ plugins:
     {# picture #}
       <div
       class="relative h-[340px] overflow-hidden rounded-lg my-auto max-h-72 md:max-h-full md:ltr:col-start-2 md:rtl:col-start-2 row-start-1 col-start-1">
-      {% image "src/assets/images/—Pngtree—freelancer software developer programmer coder_16198325.png", "individual learning session", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
+      {% image "src/assets/images/ajincodew_photos/ajincodew_man.png", "individual learning session", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
       </div>
     {# texte #}
     <div
