--- a/src/_includes/partials/Home/heroHome.njk
+++ b/src/_includes/partials/Home/heroHome.njk
@@ -3,8 +3,9 @@
   <div class="grid grid-cols-1 gap-1 lg:gap-10 md:grid-cols-2">
     {# picture #}
     <div
+      style="margin-right: 30%; margin-top: 30px"
       class="relative h-[360px] overflow-hidden rounded-lg max-h-72 md:max-h-full p-0 md:ltr:col-start-2 md:rtl:col-start-2 row-start-1 col-start-1">
-      {% image "src/assets/images/coder.png", "woman smilling", ["webp","png"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
+      {% image "src/assets/images/AJINCODEW ACADEMY/ajincodew_photos/svg/ajincodewacademy_home01.svg", "woman smilling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
     </div>
     {# texte #}
     <div
