--- a/src/_includes/partials/Training/heroTraining.njk
+++ b/src/_includes/partials/Training/heroTraining.njk
@@ -6,12 +6,12 @@
     {% if hero.img=="frontend" %}
       <div
       class="relative h-[340px] overflow-hidden rounded-lg my-auto max-h-72 md:max-h-full md:ltr:col-start-2 md:rtl:col-start-2 row-start-1 col-start-1">
-      {% image "src/assets/images/—Pngtree—freelancer software developer programmer coder_16198325.png", "woman smilling", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
+      {% image "src/assets/images/ajincodew_photos/ajincodew_man.png", "woman smilling", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
       </div>
     {% else %}
       <div
       class="relative h-[340px] overflow-hidden rounded-lg my-auto max-h-72 md:max-h-full md:ltr:col-start-2 md:rtl:col-start-2 row-start-1 col-start-1">
-      {% image "src/assets/images/—Pngtree—freelancer software developer programmer coder_16198325.png", "woman smilling", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
+      {% image "src/assets/images/ajincodew_photos/ajincodew_man.png", "woman smilling", ["webp","png"], [300,600], "(min-width: 780px) 360px, 259px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"}%}
       </div>
     {% endif %}
     {# texte #}
