feat: implements our team section

--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -4,10 +4,10 @@
   <div class="relative max-w-6xl mx-auto px-5 sm:px-6">
     <div class="justify-between md:items-center md:flex md:px-6">
       {# Logo with Hamburger #}
-      <div class="">
+      <div>
         <div class="flex items-center justify-between md:my-1 my-2 md:block">
           <!-- Logo component -->
-          <a href="{{ "/" | locale_url }}" class="block" aria-label="ajincodew" style="border-color:2px solid red; width:2px; height:2">
+          <a href="{{ "/" | locale_url }}" class="block" aria-label="ajincodew">
             {{ Logo("w-20 md:w-56") }}
           </a>
           <div class="md:hidden">
