feat: implements backend training page

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -107,6 +107,7 @@
     <!-- End Meta Pixel Code -->
 
     <!-- Google Tag Manager -->
+      <script src="/path/to/node_modules/flowbite/dist/flowbite.min.js"></script>
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
             'gtm.start':
