--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -244,7 +244,7 @@ plugins:
     
 </div>
     
-    {% jsx "ForWho", name="ForWhoBasics" %}
+    {% jsx "ForWho", name="backend" %}
     {{ More("MoreBasics") }}
 <section class="relative max-w-6xl mx-auto py-6 px-5 sm:px-12 mb-4 md:py-8">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
@@ -319,7 +319,7 @@ plugins:
         </div>              
     </div>
 </section>
-    {% jsx "FAQ", name="BackendTraining" %}
+    {% jsx "FAQ", name="backend" %}
 </main>
 
 <script>
