--- a/src/_includes/partials/Home/ourtrainings.njk
+++ b/src/_includes/partials/Home/ourtrainings.njk
@@ -1,6 +1,6 @@
 <div id="trainings" class='relative max-w-6xl mx-auto px-5 sm:px-6 py-12'>
     <p class='text-3xl md:text-3xl font-bold mb-8 text-center'>                
-        {{ translation[page.lang].OurTrainings.Title }}    
+        تدريباتنا  
     </p>
     <div class="flex flex-col md:flex-row rtl:md:flex-row-reverse justify-center items-center gap-4 md:gap-8">
         {% for training in translation[page.lang].OurTrainings.Trainings %}
