feat: change “terms of use” content text change “privacy policy” content text change “disclaimer” content text

--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -10,7 +10,7 @@ plugins:
 {% set offers = translation[page.lang].offersPython %}
 {% from "partials/Training/more.njk" import More with context %}
 {% include "partials/cta.njk" %}
-<main class="flex-grow pt-16"> 
+<main class="flex-grow pt-12"> 
     
     <section class="relative max-w-6xl mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
     <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
@@ -22,7 +22,7 @@ plugins:
         >
         <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
             <h2 class="text-2xl font-bold sm:text-3xl">
-                تطوير الواجهة الخلفية: تعلم أساسيات البرمجة في 3 أشهر فقط من منزلك                  
+                إتقان تطوير الواجهة الخلفية: تعلم الأساسيات من منزلك في ثلاثة أشهر فقط!            
             </h2>
             <p class="mt-4 text-gray-600 text-lg mb-4 md:mb-0">
                 اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!
