--- a/src/ar/termsofuse.njk
+++ b/src/ar/termsofuse.njk
@@ -5,14 +5,14 @@ title: شروط الاستخدام
 <main class="flex-grow pt-16">
     <section class="relative">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 ">
-            <div class="pt-32 pb-12 md:pt-40 md:pb-20 ">
-                <div class="text-center pb-12 md:pb-16 ">
+            <div>
+                <div class="text-center">
                     <h1 class="text-4xl md:text-5xl font-extrabold leading-tighter mb-6 md:mb-10"
                         data-aos="zoom-y-out">
                         شروط الاستخدام
                     </h1>
                     <p dir="rtl">
-                        شروط الاسخدام لأي زائر يدخل هذا الموقع :<br />
+                        <strong>شروط الاسخدام لأي زائر يدخل هذا الموقع :</strong><br />
                         <br />
                         سياسة الخصوصيه : لآجي نكوديو دوت كوم يحترم سياسة الخصوصيه لديك , و لك كامل التحكم بمعلوماتك و لن يتم
                         تجميعها الا باذنك و برغبتك انت طبعاً , و قد قمنا بعمل صفحه كامله تعرف فيها سياسة الخصوصيه الخاصه
@@ -24,7 +24,7 @@ title: شروط الاستخدام
                         <br /><br />
                         لأي استفسار حول هذه الشروط , يرجى ارسال ايميل الى
                         <br /><a class="text-blue-600 hover:underline"
-                            href="mailto:ajincodew.academy@gmail.com">ajincodew.academy@gmail.com</a>
+                            href="mailto:ajincodew.academy@gmail.com"><strong>ajincodew.academy@gmail.com</strong></a>
                     </p>
                 </div>
             </div>
