--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -49,7 +49,7 @@ plugins:
     </section>
 
     <div class='flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative max-w-8xl md:mx-auto md:justify-center'>
-    <section class="relative bg-white">
+    <section class="relative bg-white" id="content">
         <div class="relative max-w-6xl mx-auto px-4 md:px-0 md:mx-0">
             <div class="max-w-3xl mx-auto text-right ltr:text-left py-4 px-2 sm:px-4 md:py-6">
                 <div class="py-3 rounded-sm md:border md:shadow-sm md:px-4">
@@ -297,8 +297,7 @@ plugins:
                         <a class="text-lg md:text-xl font-semibold text-right text-white">درهم</a>              
                     </div>
                         <p class="text-sm text-white text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب كاملاً (3 أشهر) بدفع مرة واحدة.</p>     
-                        <a href="https://api.whatsapp.com/send?phone=212612527672&text=بغيت%20نسجل%20ف%20التدريب%20ديال%20البرمجة%20بالعرض%20ديال%20ثلاثة%20شهور%20بـ%20599%20درهم."
-                            target="_blank"
+                        <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
                             onClick="fbq('track', 'Lead')" 
                             class="w-full py-1 rounded-md bg-white text-base md:text-lg font-medium text-center text-red-primary">تسجيل</a>
                 </div> 
@@ -310,10 +309,12 @@ plugins:
                         <p class="text-lg md:text-xl font-semibold text-right text-gray-600 ">درهم</p>                     
                     </div>
                     <p class="text-sm text-gray-600 text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب بدفع شهري.</p>                
-                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=بغيت%20نسجل%20فالتدريب%20ديال%20البرمجة%20بالعرض%20ديال%20249%20درهم%20فالشهر."
-                        target="_blank"
-                        onClick="fbq('track', 'Lead')" 
-                        class="w-full py-1 rounded-md bg-green-primary text-base md:text-lg font-medium text-center text-white">تسجيل</a>
+                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20249%20%D8%AF%D8%B1%D9%87%D9%85%20%D9%81%D8%A7%D9%84%D8%B4%D9%87%D8%B1."
+                    target="_blank"
+                    onClick="fbq('track', 'Lead')" 
+                    class="w-full py-1 rounded-md bg-green-primary text-base md:text-lg font-medium text-center text-white">
+                    تسجيل
+                    </a>
                 </div> 
             </div> 
         </div>              
