--- a/src/_includes/partials/Home/ourtrainings.njk
+++ b/src/_includes/partials/Home/ourtrainings.njk
@@ -1,9 +1,247 @@
-<div id="trainings" class='relative max-w-6xl mx-auto px-5 sm:px-6 py-12'>
+<div id="trainings" class='relative max-w-7xl mx-auto px-5 sm:px-6 py-12'>
     <p class='text-3xl md:text-3xl font-bold mb-8 text-center'>                
         تدريباتنا  
     </p>
     <div class="flex flex-col md:flex-row rtl:md:flex-row-reverse justify-center items-center gap-4 md:gap-8">
         <a 
+            class="overflow-hidden rounded-xl 
+            shadow-xl border border-gray-300" href={{ "/ar/backend" }}
+        >
+            <div class="md:p-8 px-5 py-6">
+                <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        OOP
+                    </li>
+                     <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Design Patterns                    
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Core
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Boot
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Beans
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Dependency Injection (DI)
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Profiles
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Data JPA
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        DTO Pattern
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Service Layer
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Data Validation
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        RESTful API
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        SOAP API
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Web Services
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Postman
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Security
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        OAuth 2.0
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Cloud
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Microservices
+                    </li>
+                </ul>
+
+                <p class="my-2.5 text-2xl font-bold">
+                    تدريب تطوير الواجهة الخلفية                
+                </p>
+
+                <p class="mt-2 text-base text-gray-500">
+                    اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!
+                </p>
+                <p
+                    class="inline-block pb-1 mt-4 font-medium text-green-primary
+                    border-b border-green-primary "
+                >
+                    إبدأ الآن
+                </p>
+            </div>
+        </a>
+
+        <a 
+            class="overflow-hidden rounded-xl 
+            shadow-xl border border-gray-300" href={{ "/ar/backend" }}
+        >
+            <div class="md:p-8 px-5 py-6">
+                <ul class="flex md:space-x-1 flex-wrap space-y-1 ">
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        OOP
+                    </li>
+                     <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Design Patterns                    
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Core
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Boot
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Beans
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Dependency Injection (DI)
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Profiles
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Data JPA
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        DTO Pattern
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Service Layer
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Data Validation
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        RESTful API
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        SOAP API
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Web Services
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Postman
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Security
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        OAuth 2.0
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Spring Cloud
+                    </li>
+                    <li
+                        class="my-auto inline-block px-3 py-1 text-xs font-semibold text-white bg-green-primary rounded-full mx-1" 
+                    >
+                        Microservices
+                    </li>
+                </ul>
+
+                <p class="my-2.5 text-2xl font-bold">
+                    تدريب تطوير الواجهة الخلفية                
+                </p>
+
+                <p class="mt-2 text-base text-gray-500">
+                    اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!
+                </p>
+                <p
+                    class="inline-block pb-1 mt-4 font-medium text-green-primary
+                    border-b border-green-primary "
+                >
+                    إبدأ الآن
+                </p>
+            </div>
+        </a>
+
+                <a 
             class="overflow-hidden rounded-xl 
             shadow-xl border border-gray-300" href={{ "/ar/backend" }}
         >
